--- a/Uclearner/templates/layout.html
+++ b/Uclearner/templates/layout.html
@@ -1,78 +1,205 @@
-{% from "macros.html" import nav_link with context %}
 <!DOCTYPE html>
 <html>
-    <head>
-    
-
-        {% block heading %}
-        <h1>{% block title %}{% endblock %} - Flask Super Example</h1>
-        {% endblock %}
-        
-        
-        <title>Flask Template Example</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
-                <style type="text/css">
-                    .container {
-                        max-width: 500px;
-                        padding-top: 100px;
-                    }
-                h2 {color: red;}
-                    </style>
-                </head>
-    <body>
-        
-        <nav class="navbar navbar-inverse" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Uclean</a>
-                </div>
+    <title>W3.CSS Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+                    <style>
+                        body {font-family: "Lato", sans-serif}
+                        .mySlides {display: none}
+                        </style>
+                    <body>
                 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        {{ nav_link('about', 'About') }}
-                        {{ nav_link('signup', 'Sign Up') }}
-                        {{ nav_link('login', 'Login') }}
-                        {{ nav_link('order', 'Order') }}
-
-                    </ul>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                                </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
+                        
+                        <!-- Navigation Bar -->
+                        <div class="w3-top">
+                            <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
+                                <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+                                    <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+                                </li>
+                                <li><a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a></li>
+                                <li class="w3-hide-small"><a href="{{url_for("login")}}" class="w3-padding-large">Log in</a></li>
+                                <li class="w3-hide-small"><a href="{{url_for("signup")}}" class="w3-padding-large">Sign up</a></li>
+                                <li class="w3-hide-small"><a href="{{url_for("about")}}" class="w3-padding-large">About</a></li>
+                                <li class="w3-hide-small w3-dropdown-hover">
+                                    <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MORE <i class="fa fa-caret-down"></i></a>
+                                    <div class="w3-dropdown-content w3-white w3-card-4">
+                                        <a href="#">Item1</a>
+                                        <a href="#">Item2</a>
+                                        <a href="#">Item3</a>
+                                    </div>
+                                </li>
                             </ul>
-                        </li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-        
-        <div class="container">
-            <h2>This is part of my base template</h2>
-            <br>
-            {% block content %}{% endblock %}
-            <br>
-            <h2>This is part of my base template</h2>
-        </div>
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    </body>
+                        </div>
+                        
+                     
+                        
+                        <!-- Page content -->
+                        <div class="w3-content" style="max-width:2000px;margin-top:46px">
+                            
+                            <!-- Automatic Slideshow Images -->
+                            <div class="mySlides w3-display-container w3-center">
+                                <img src="/static/images/cover_image.jpg" style="width:50%">
+                                                                        </div>
+                            <div class="mySlides w3-display-container w3-center">
+                                <img src="/static/images/cover_image2.jpg" style="width:50%">
+                                    </div>
+                            
+                            <div class="mySlides w3-display-container w3-center">
+                                <img src="/static/images/cover_image_3.jpg" style="width:50%">
+                                    </div>
+                            
+                        </div>
+                        
+                        <!--- Search box ---->
+                        
+                            <div class="w3-display-container w3-padding-32 w3-blue" style="height:50px; margin-top:46px;">
+                           
+                                <div class="w3-display-middle">
+                                    <div class="w3-col m10">
+                                        <input class="w3-input  w3-border" type="text" placeholder="Zip code">
+                                            </div>
+                                    <div class="w3-col m2">
+                                        <button class="w3-btn  w3-large w3-hover-green">Search</button>
+                                    </div>
+                
+                                 </div>
+                            </div>
+                            <br>
+                            <!-- Display laundromat-->
+                            <div class="w3-container w3-teal style="margin:46px" >
+                                <h2>Nearby Laundromat</h2>
+                                
+                                <ul class="w3-ul w3-card-1  w3-white style="max-width:200px">
+                                    {% for n in range(5) %}
+                                    <li class="w3-padding-16">
+                                        <img src="/static/images/restau03_mini.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                                            <span class="w3-large"><a href="L1">502 W 113th St</a></span><br>
+                                            <div class="rating">
+                                                {% for n in range(5) %}
+                                                <span>★</span>
+                                                {% endfor %}
+                                             
+                                            </div>
+                                            </li>
+                                     {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="w3-container w3-teal style="max-width:200px">
+                            <H5> End </H5>
+                            </div>
+
+
+                            <!-- The Contact Section -->
+                            <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+                                <h2 class="w3-wide w3-center">CONTACT</h2>
+                                <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+                                <div class="w3-row w3-padding-32">
+                                    <div class="w3-col m6 w3-large w3-margin-bottom">
+                                        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
+                                        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
+                                        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+                                    </div>
+                                    <div class="w3-col m6">
+                                        <form action="form.asp" target="_blank">
+                                            <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+                                                <div class="w3-half">
+                                                    <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+                                                        </div>
+                                                <div class="w3-half">
+                                                    <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+                                                        </div>
+                                            </div>
+                                            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+                                                <button class="w3-btn w3-section w3-right" type="submit">SEND</button>
+                                                </form>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- End Page Content -->
+                        </div>
+                        
+                        <!-- Add Google Maps -->
+                        <div id="googleMap" style="height:400px;filter:grayscale(90%);-webkit-filter:grayscale(90%);"></div>
+                        <script src="https://maps.googleapis.com/maps/api/js"></script>
+                        <script>
+                            
+                            
+                          var myCenter = new google.maps.LatLng(32.878114, -87.629798);
+
+                          
+                            
+                            function initialize() {
+                                var mapProp = {
+                                    center: myCenter,
+                                    zoom: 12,
+                                    scrollwheel: false,
+                                    draggable: false,
+                                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                                };
+                                
+                                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+                                
+
+                                var marker = new google.maps.Marker({
+                                                                    position: myCenter,
+                                                                    });
+                                                                    
+                                                                    marker.setMap(map);
+                            }
+                        
+                        google.maps.event.addDomListener(window, 'load', initialize);
+                            </script>
+                        
+                        <!-- Footer -->
+                        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+                            <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
+                            <i class="fa fa-instagram w3-hover-text-purple"></i>
+                            <i class="fa fa-snapchat w3-hover-text-yellow"></i>
+                            <i class="fa fa-pinterest-p w3-hover-text-red"></i>
+                            <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+                            <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+                            <p class="w3-medium">Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+                        </footer>
+                        
+                        <script>
+                            // Automatic Slideshow - change image every 4 seconds
+                            var myIndex = 0;
+                            carousel();
+                            
+                            function carousel() {
+                                var i;
+                                var x = document.getElementsByClassName("mySlides");
+                                for (i = 0; i < x.length; i++) {
+                                    x[i].style.display = "none";
+                                }
+                                myIndex++;
+                                if (myIndex > x.length) {myIndex = 1}
+                                x[myIndex-1].style.display = "block";
+                                setTimeout(carousel, 4000);
+                            }
+                        
+                        // Used to toggle the menu on small screens when clicking on the menu button
+                        function myFunction() {
+                            var x = document.getElementById("navDemo");
+                            if (x.className.indexOf("w3-show") == -1) {
+                                x.className += " w3-show";
+                            } else {
+                                x.className = x.className.replace(" w3-show", "");
+                            }
+                        }
+                        
+                        // When the user clicks anywhere outside of the modal, close it
+                        var modal = document.getElementById('ticketModal');
+                        window.onclick = function(event) {
+                            if (event.target == modal) {
+                                modal.style.display = "none";
+                            }
+                        }
+                        </script>
+                        
+                    </body>
 </html>
+
