--- a/Uclearner/templates/template.html
+++ b/Uclearner/templates/template.html
@@ -17,7 +17,7 @@
 <p>Loop through the list:</p>
 <ul>
     {% for n in my_list %}
-    <li>{{n}}</li>
+    <li><a href="{{n}}">"{{n}}"</a></li>
     {% endfor %}
 </ul>
 <h3> This is the end of my child template</h3>
