--- a/Uclearner/templates/signup.html
+++ b/Uclearner/templates/signup.html
@@ -20,7 +20,7 @@
     <h3>Free sign up!</h3>
 </div>
 
-<form  class="w3-container w3-blue" action="{{ url_for('signup') }}" method="post" name="personal">
+<form  class="w3-container w3-blue" action="{{ url_for('signup') }}" method="POST" name="personal">
     
         
         <label class="w3-label w3-large w3-text-white"><b>First Name</b></label>
