--- a/Uclearner/templates/userprofile.html
+++ b/Uclearner/templates/userprofile.html
@@ -31,12 +31,11 @@
                 <div class="w3-container">
                     
                     <form action="get">
-                    <p><i class="fa fa-user fa-fw w3-margin-right w3-large w3-text-teal"></i>John Jay</p>
-                    <p><i class="fa fa-calendar fa-fw w3-margin-right w3-large w3-text-teal"></i>08/21/1975</p>
-                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>502 W 113th St New York NY 10025 United States </p>
+                    <p><i class="fa fa-user fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][0]}} {{my_list[0][1]}} </p>
+                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][4]}} {{my_list[0][5]}} {{my_list[0][6]}} {{my_list[0][7]}} {{my_list[0][8]}} </p>
              
-                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>tutao1818@gmail.com</p>
-                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>123-456-7890</p>
+                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][2]}}</p>
+                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>{my_list[0][3]}}</p>
                     <hr>
                     </form>
             
